.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/VMS_Send_Status__c.field-meta.xml
<CustomField>
    <fullName>VMS_Send_Status__c</fullName>
    <label>VMS Send Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready To Send</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>