.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/VMS_Source__c.field-meta.xml
<CustomField>
    <fullName>VMS_Source__c</fullName>
    <label>VMS Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VMS_Source</valueSetName>
    </valueSet>
</CustomField>