.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/fields/Work_Restriction_Student_Visa__c.field-meta.xml
<CustomField>
    <fullName>Work_Restriction_Student_Visa__c</fullName>
    <description>Checking whether the Student Visa work restriction is applied to the assigned candidate.</description>
    <formula>IF(
   AND(CONTAINS(TEXT( sirenum__Contact__r.Visa_Type__c ),&apos;500&apos;),
       sirenum__Scheduled_Local_Start_Date__c &gt;=  sirenum__Contact__r.Study_Break_Start_Date__c ,
       sirenum__Scheduled_Local_Start_Date__c &lt;=  sirenum__Contact__r.Study_Break_End_Date__c 
   ),
   &apos;Student - In Study Break&apos;,
   IF(
      CONTAINS(TEXT( sirenum__Contact__r.Visa_Type__c ),&apos;500&apos;),
      &apos;Student (Limited Work Hours)&apos;,
      &apos;NA&apos;
   )

)</formula>
    <inlineHelpText>This field compares the Scheduled Start Date and the assigned candidate&apos;s study break dates, and tells whether the work restriction is applied or not.</inlineHelpText>
    <label>Work Restriction - Student Visa</label>
    <type>Text</type>
</CustomField>