.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/validationRules/Auto_Broadcast_Prevent_UnBroadcast.validationRule-meta.xml
<ValidationRule>
    <fullName>Auto_Broadcast_Prevent_UnBroadcast</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNEW()), NOT(Auto_Broadcast__c), PRIORVALUE(Auto_Broadcast__c))</errorConditionFormula>
    <errorMessage>You cannot switch Auto Broadcasting off once set.</errorMessage>
</ValidationRule>