.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/validationRules/Prevent_Confirmed_While_Role_Multi.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Confirmed_While_Role_Multi</fullName>
    <active>true</active>
    <errorConditionFormula>AND(sirenum__Team__r.Name = &apos;Multi&apos;, OR(ISPICKVAL(Schedule_Status__c , &quot;Confirmed&quot;),ISPICKVAL(Schedule_Status__c , &quot;Completed&quot;)))</errorConditionFormula>
    <errorMessage>Job Role must be set correctly before this shift can be Confirmed</errorMessage>
</ValidationRule>