.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/validationRules/Required_Shift_Must_Be_One.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Shift_Must_Be_One</fullName>
    <active>true</active>
    <description>Required shift = 1 all the time.</description>
    <errorConditionFormula>sirenum__Broadcasts__c &lt;&gt; 1</errorConditionFormula>
    <errorDisplayField>sirenum__Broadcasts__c</errorDisplayField>
    <errorMessage># of Require Shifts must be 1.</errorMessage>
</ValidationRule>