.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/validationRules/Restrict_VMS_Send_While_Role_Multi.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_VMS_Send_While_Role_Multi</fullName>
    <active>true</active>
    <errorConditionFormula>AND(sirenum__Team__r.Name = &apos;Multi&apos;, ISPICKVAL( VMS_Send_Status__c , &quot;Ready To Send&quot;))</errorConditionFormula>
    <errorMessage>Job Role must be set correctly before this shift can be released to the VMS</errorMessage>
</ValidationRule>