.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/validationRules/role_bundle_must_be_role_based.validationRule-meta.xml
<ValidationRule>
    <fullName>role_bundle_must_be_role_based</fullName>
    <active>true</active>
    <errorConditionFormula>Role_OR_Bundle__c != NULL &amp;&amp;
NOT(Role_OR_Bundle__r.Is_Role_Bundle__c)</errorConditionFormula>
    <errorMessage>Role Bundle (if specified) must be a role-based Competency Bundle.</errorMessage>
</ValidationRule>