.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/validationRules/skill_bundle_must_be_skill_based.validationRule-meta.xml
<ValidationRule>
    <fullName>skill_bundle_must_be_skill_based</fullName>
    <active>true</active>
    <errorConditionFormula>Skill_Attribute_OR_Bundle__c != NULL &amp;&amp;
Skill_Attribute_OR_Bundle__r.Is_Role_Bundle__c</errorConditionFormula>
    <errorMessage>Skill Bundle (if specified) must be a skill-based Competency Bundle.</errorMessage>
</ValidationRule>