.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/listViews/Copy_of_Missing_Rates_MPR_Review.listView-meta.xml
<ListView>
    <fullName>Copy_of_Missing_Rates_MPR_Review</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND (6 OR 7 OR 8)</booleanFilter>
    <columns>NAME</columns>
    <columns>sirenum__Contact__c</columns>
    <columns>tc9_ext_sirint__Assignment__c</columns>
    <columns>tc9_ext_sirint__Timesheet__c</columns>
    <columns>tc9_ext_sirint__Timesheet_Entry__c</columns>
    <columns>sirenum__Scheduled_Start_Time__c</columns>
    <columns>sirenum__Scheduled_End_Time__c</columns>
    <columns>sirenum__Team__c</columns>
    <columns>sirenum__Site__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>sirenum__Published__c</columns>
    <columns>Minimum_Pay_Rate__c</columns>
    <columns>sirenum__Approved_By_Client__c</columns>
    <columns>Branch_for_reporting__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sirenum__Cancelled__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>sirenum__Shift__c.sirenum__Shift</value>
    </filters>
    <filters>
        <field>sirenum__Contact__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Minimum_Pay_Rate__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>tc9_ext_sirint__TSE_Start_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>11/2/2025</value>
    </filters>
    <filters>
        <field>Branch_for_reporting__c</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>Branch_for_reporting__c</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>Branch_for_reporting__c</field>
        <operation>contains</operation>
    </filters>
    <label>MPR Review</label>
</ListView>