.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/listViews/Shift_Demands_Today.listView-meta.xml
<ListView>
    <fullName>Shift_Demands_Today</fullName>
    <columns>NAME</columns>
    <columns>sirenum__Contact__c</columns>
    <columns>sirenum__Scheduled_Local_Start_Date__c</columns>
    <columns>sirenum__Scheduled_Local_Start_Time__c</columns>
    <columns>sirenum__Scheduled_Local_End_Time__c</columns>
    <columns>sirenum__Site__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sirenum__Scheduled_Local_Start_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>sirenum__Shift__c.sirenum__Shift_Demand</value>
    </filters>
    <label>Shift Demands_Today</label>
</ListView>