.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Shift__c/listViews/Shift_To_Reconfirm.listView-meta.xml
<ListView>
    <fullName>Shift_To_Reconfirm</fullName>
    <columns>NAME</columns>
    <columns>Schedule_Status__c</columns>
    <columns>sirenum__Contact__c</columns>
    <columns>Confirmed_With_Facility__c</columns>
    <columns>Confirmed_With_Employee__c</columns>
    <columns>sirenum__Scheduled_Local_Start_Date__c</columns>
    <columns>sirenum__Scheduled_Local_Start_Time__c</columns>
    <columns>sirenum__Scheduled_Local_End_Time__c</columns>
    <columns>sirenum__Site__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>sirenum__Shift__c.sirenum__Shift</value>
    </filters>
    <filters>
        <field>sirenum__Scheduled_Local_Start_Date__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>Schedule_Status__c</field>
        <operation>equals</operation>
        <value>Reconfirm with Employee,Reconfirm with Facility,Reconfirm</value>
    </filters>
    <filters>
        <field>sirenum__Site__c</field>
        <operation>contains</operation>
        <value>icu</value>
    </filters>
    <label>Shift_To Reconfirm</label>
</ListView>